--- a/serverless.yml
+++ b/serverless.yml
@@ -11,8 +11,7 @@
 #
 # Happy Coding!
 
-service: modeltest-lambda # NOTE: update this with your service name
-
+service: mestrado # NOTE: update this with your service name
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
 # frameworkVersion: "=X.X.X"
@@ -55,7 +54,7 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  modeltest-lambda:
+  modeltest:
     memorySize: 128
     handler: handler.execute
 
