--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "env": {
-                "IS_LOCAL": "True"
+                "IS_LOCAL": "True",
+                "VSCODE": "True"
             }
         }
     ]
