pass file via ENV when debugging locally

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "console": "integratedTerminal",
             "env": {
                 "IS_LOCAL": "True",
-                "VSCODE": "True"
+                "VSCODE": "True",
+                "DEBUG_FILE": "small.json"
             }
         }
     ]
