--- a/serverless.yml
+++ b/serverless.yml
@@ -33,8 +33,8 @@ package:
   exclude:
     - .vscode/**
     - .git/**
-    - README.md
-    - sns.json
+    - "*.md"
+    - "*.json"
 
 functions:
   modeltest:
