fixed dlq creation

--- a/serverless.yml
+++ b/serverless.yml
@@ -4,45 +4,63 @@
 
 service: mestrado # NOTE: update this with your service name
 
+plugins:
+  - serverless-pseudo-parameters
+
 # PARAMS
 custom:
+  dlq: "${self:service}-${self:provider.stage}-failed"
   inputqueue: "${self:service}-${self:provider.stage}-inputqueue"
-  sourceBucket: mestrado-dev-phyml-input
+  sourceBucket: "${self:service}-${self:provider.stage}-phyml-input"
 
 provider:
   name: aws
+  region: us-east-2
   runtime: python3.6
 
 # you can overwrite defaults here
 #  stage: dev
-  region: us-east-2
 
 # you can add statements to the Lambda function's IAM Role here
   iamRoleStatements:
-#    - Effect: "Allow"
-#      Action:
-#        - "SNS:Publish"
-#      Resource: { "Fn::Join" : ["", ["arn:aws:sns:${self:provider.region}:", { "Ref" : "AWS::AccountId" }, ":${self:custom.inputqueue}" ] ]  }
     - Effect: Allow
       Action:
         - s3:PutObject
         - s3:GetObject
       Resource: "arn:aws:s3:::${self:custom.sourceBucket}/*"
+    - Effect: Allow
+      Action:
+        - sns:*
+      Resource: "*"
+    - Effect: Allow
+      Action:
+        - batch:SubmitJob
+      Resource: "arn:aws:batch:#{AWS::Region}:#{AWS::AccountId}:*"
 
 package:
   exclude:
     - .vscode/**
     - .git/**
+    - node_modules/**
     - "*.md"
     - "*.json"
 
 functions:
+
   modeltest:
     memorySize: 128
     timeout: 30
     handler: handler.execute
+    onError: "arn:aws:sns:#{AWS::Region}:#{AWS::AccountId}:${self:custom.dlq}"
     events:
       - sns: ${self:custom.inputqueue}
+
+  dlq-forwarder:
+    memorySize: 128
+    timeout: 5
+    handler: forwarder.execute
+    events:
+      - sns: ${self:custom.dlq}
 
 
 # you can add CloudFormation resource templates here
