--- a/serverless.yml
+++ b/serverless.yml
@@ -12,6 +12,7 @@ custom:
   dlqtopic: "${self:service}-${opt:stage, self:provider.stage}-failed"
   inputtopic: "${self:service}-${opt:stage, self:provider.stage}-input"
   sourceBucket: "${self:service}-${opt:stage, self:provider.stage}-phyml"
+  memoryAllocation: "512"
   remover:
     buckets:
       - ${self:custom.sourceBucket}
@@ -42,7 +43,7 @@ package:
 functions:
 
   modeltest:
-    memorySize: 128
+    memorySize: "${self:custom.memoryAllocation}"
     timeout: 30
     handler: handler.execute
     onError: "arn:aws:sns:#{AWS::Region}:#{AWS::AccountId}:${self:custom.dlqtopic}"
@@ -69,10 +70,6 @@ functions:
 
 resources:  # CloudFormation template syntax
   Resources:
-    InputBucket:
-      Type: AWS::S3::Bucket
-      Properties:
-        BucketName: "${self:custom.sourceBucket}"
     BatchServiceRole:
       Type: AWS::IAM::Role
       Properties:
@@ -116,29 +113,31 @@ resources:  # CloudFormation template syntax
             Action: sts:AssumeRole
         ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonEC2SpotFleetRole
-    TestApplicationJob:
+        - arn:aws:iam::aws:policy/service-role/AmazonEC2SpotFleetTaggingRole
+    InputBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: "${self:custom.sourceBucket}"
+    BatchJobDef:
       Type: AWS::Batch::JobDefinition
       Properties:
         Type: container
-        ContainerProperties:
-          Image:
-            Fn::Join:
-            - ''
-            - - 137112412989.dkr.ecr.
-              - Ref: AWS::Region
-              - ".amazonaws.com/amazonlinux:latest"
-          Vcpus: 2
-          Memory: 2000
-          Command:
-          - echo
-          - Hello World, I am a low priority job
+        Parameters:
+          phyfilepath : small
+          country: botswana
         RetryStrategy:
-          Attempts: 1
-    LowPriorityJobQueue:
+          Attempts: 2
+        ContainerProperties:
+          Image: mateusaubin/modeltest-batch
+          Vcpus: 1
+          Memory: ${self:custom.memoryAllocation}
+          Command:
+          -  Ref::phyfilepath 
+    BatchJobQueue:
       Type: AWS::Batch::JobQueue
       Properties:
-        JobQueueName: LowPriorityBatchCloudformationJobqueue
-        Priority: 2
+        #JobQueueName: LowPriorityBatchCloudformationJobqueue
+        Priority: 500
         ComputeEnvironmentOrder:
         - Order: 1
           ComputeEnvironment:
@@ -147,13 +146,20 @@ resources:  # CloudFormation template syntax
       Type: AWS::Batch::ComputeEnvironment
       Properties:
         Type: MANAGED
+        ServiceRole:
+          Ref: BatchServiceRole
         ComputeResources:
           Type: SPOT
+          BidPercentage: 40
+          ImageId: ami-09a64272e7fe706b6 #https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-optimized_AMI.html
           MinvCpus: 0
           DesiredvCpus: 0
-          MaxvCpus: 64
+          MaxvCpus: 4
           InstanceTypes:
-            - optimal
+            - c4
+            - c5
+          Tags:
+            Name: batch-spot-instace
           Subnets:
             - subnet-63c53f2f
             - subnet-05bc996d
@@ -162,11 +168,8 @@ resources:  # CloudFormation template syntax
             - sg-79aa1014
           InstanceRole:
             Ref: IamInstanceProfile
-          BidPercentage: 40
           SpotIamFleetRole:
             Ref: SpotIamFleetRole
-        ServiceRole:
-          Ref: BatchServiceRole
 
 
   # The "Outputs" that your AWS CloudFormation Stack should produce.  This allows references between services.
