--- a/serverless.yml
+++ b/serverless.yml
@@ -124,6 +124,7 @@ resources:  # CloudFormation template syntax
         Type: container
         Parameters:
           phyfilepath : small
+          commandlineargs : "-d nt -n 1 -b 0 --run_id GTR+I+G -m 012345 -f m -v e -c 4 -a e --no_memory_check --r_seed 12345 -o tlr -s BEST"
           country: botswana
         RetryStrategy:
           Attempts: 2
@@ -132,7 +133,11 @@ resources:  # CloudFormation template syntax
           Vcpus: 1
           Memory: ${self:custom.memoryAllocation}
           Command:
-          -  Ref::phyfilepath 
+          - Ref::phyfilepath
+          - Ref::commandlineargs
+          Environment:
+            - Name: ENV_BUCKET
+              Value: "${self:custom.sourceBucket}"
     BatchJobQueue:
       Type: AWS::Batch::JobQueue
       Properties:
@@ -173,10 +178,10 @@ resources:  # CloudFormation template syntax
 
 
   # The "Outputs" that your AWS CloudFormation Stack should produce.  This allows references between services.
-  #Outputs:
-  #  InputBucketArn:
-  #    Description: The ARN for the User's Table
-  #    Value:
-  #      "Fn::GetAtt": [ InputBucket, Arn ]
-  #    Export:
-  #      Name: ${self:service}:${opt:stage, self:provider.stage}:InputBucketArn
+  Outputs:
+    InputBucketArn:
+      Description: Bucket which will receive the .phy files
+      Value:
+        "Fn::GetAtt": [ InputBucket, Arn ]
+      Export:
+        Name: ${self:service}:${opt:stage, self:provider.stage}:InputBucketArn
