--- a/serverless.yml
+++ b/serverless.yml
@@ -39,6 +39,7 @@ package:
   individually: true
   exclude:
     - "*/**"
+    - "!aws.py"
 
 functions:
 
@@ -52,7 +53,6 @@ functions:
     package:
       include:
         - "lib/phyml"
-        - aws.py
         - handler.py
 
   dlq-forwarder:
