--- a/serverless.yml
+++ b/serverless.yml
@@ -12,13 +12,14 @@ custom:
   dlqtopic: "${self:service}-${opt:stage, self:provider.stage}-failed"
   inputtopic: "${self:service}-${opt:stage, self:provider.stage}-input"
   sourceBucket: "${self:service}-${opt:stage, self:provider.stage}-phyml"
+
+  runner: "aP6"
   batch:
-    job-memory: "512"
+    job-memory: "256"
     cluster-cpus: 16
-    runner: "aP6"
   lambda:
     power: 1536
-    timeout: 60
+    timeout: 45
   # remover:
   #   buckets:
   #     - ${self:custom.sourceBucket}
@@ -38,10 +39,11 @@ provider:
       Resource: "arn:aws:s3:::${self:custom.sourceBucket}/*"
     - Effect: Allow
       Action:
+        - batch:ListJobs
         - batch:SubmitJob
         - batch:DescribeComputeEnvironments
         - batch:UpdateComputeEnvironment
-      Resource: "arn:aws:batch:*"
+      Resource: "*"
     - Effect: Allow
       Action:
         - dynamodb:DeleteItem
@@ -63,6 +65,8 @@ functions:
     onError: "arn:aws:sns:#{AWS::Region}:#{AWS::AccountId}:${self:custom.dlqtopic}"
     events:
       - sns: ${self:custom.inputtopic}
+    tags:
+      Runner: ${self:custom.runner}
     package:
       include:
         - "lib/phyml"
@@ -82,6 +86,8 @@ functions:
       BATCH_COMPUTE:
         Ref: SpotComputeEnvironment
       MODELTEST_DLQTOPIC: ${self:custom.dlqtopic}
+    tags:
+      Runner: ${self:custom.runner}
     package:
       include:
         - src/forwarder.py
@@ -94,20 +100,20 @@ resources:  # CloudFormation template syntax
     #   explicit dependencies to avoid errors during stack creation
     ModeltestLambdaFunction:
       DependsOn: 
-        - ModeltestLogGroup
-        - IamRoleLambdaExecution
+        # - ModeltestLogGroup
+        # - IamRoleLambdaExecution
         - SNSTopicMestradodevfailed
-        - InputBucket
-    ForwarderLambdaFunction:
-      DependsOn:
-        - ForwarderLogGroup
-        - IamRoleLambdaExecution
-        - BatchJobDef
+        # - InputBucket
+    # ForwarderLambdaFunction:
+      # DependsOn:
+        # - ForwarderLogGroup
+        # - IamRoleLambdaExecution
+        # - BatchJobDef
     # S3 Resources
-    InputBucket:
-      Type: AWS::S3::Bucket
-      Properties:
-        BucketName: "${self:custom.sourceBucket}"
+    # InputBucket:
+    #   Type: AWS::S3::Bucket
+    #   Properties:
+    #     BucketName: "${self:custom.sourceBucket}"
     # AWS Batch Resources
     BatchServiceRole:
       Type: AWS::IAM::Role
@@ -218,8 +224,8 @@ resources:  # CloudFormation template syntax
               # https://boto3.amazonaws.com/v1/documentation/api/latest/guide/configuration.html#environment-variable-configuration
             - Name: AWS_DEFAULT_REGION
               Value: "${self:provider.region}"
-      DependsOn:
-        - BatchJobQueue
+      # DependsOn:
+        # - BatchJobQueue
     BatchJobQueue:
       Type: AWS::Batch::JobQueue
       Properties:
@@ -245,7 +251,7 @@ resources:  # CloudFormation template syntax
             - c5
           Tags:
             Name: ${self:service}-${opt:stage, self:provider.stage}-batch-spot
-            Runner: ${self:custom.batch.runner}
+            Runner: ${self:custom.runner}
           Subnets:
             - subnet-63c53f2f
             - subnet-05bc996d
@@ -262,10 +268,10 @@ resources:  # CloudFormation template syntax
   Outputs:
     inputbucket:
       Value: ${self:custom.sourceBucket}
+    runner:
+      Value: ${self:custom.runner}
     batchclustercpus:
       Value: ${self:custom.batch.cluster-cpus}
-    batchrunner:
-      Value: ${self:custom.batch.runner}
     lambdapower:
       Value: ${self:custom.lambda.power}
     lambdatimeout:
