--- a/serverless.yml
+++ b/serverless.yml
@@ -75,6 +75,7 @@ functions:
   forwarder:
     memorySize: 128
     timeout: 5
+    reservedConcurrency: 1
     handler: src/forwarder.execute
     events:
       - sns: ${self:custom.dlqtopic}
@@ -242,7 +243,7 @@ resources:  # CloudFormation template syntax
           Ref: BatchServiceRole
         ComputeResources:
           Type: SPOT
-          BidPercentage: 30
+          BidPercentage: 50
           ImageId: ami-0307f7ccf6ea35750 # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-optimized_AMI.html
           MinvCpus: 0
           DesiredvCpus: 0
@@ -278,3 +279,12 @@ resources:  # CloudFormation template syntax
       Value: ${self:custom.lambda.timeout}
     inputtopic:
       Value: "arn:aws:sns:#{AWS::Region}:#{AWS::AccountId}:${self:custom.inputtopic}"
+    batchcomputeenv:
+      Value:
+        "Ref": SpotComputeEnvironment
+    batchjobqueue:
+      Value:
+        "Ref": BatchJobQueue
+    batchjobdefinition:
+      Value:
+        "Ref": BatchJobDef
